Revert "Adding punctuation"
This reverts commit 317b84b6037eaf5950f5ceb134b3c3c5ff776b28.

--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 	<h1>mg&#38;co</h1>
-	<p>This is the portfolio of Melissa Grant.</p>
+	<p>This is the portfolio of Melissa Grant</p>
 </body>
 </html>
