--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
-<title>MG&#38;CO</title>
 <head>
-	<link rel="stylesheet" type="text/css" href="css/style.css"
+	<title>MG&amp;CO</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<h1>mg&#38;co</h1>
+	<h1>mg&amp;co</h1>
 	<p>This is the portfolio of Melissa Grant.</p>
 </body>
 </html>
