Update to unit 3

--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -9,9 +9,9 @@
 	<p>Melissa Grant is a multidisciplinary designer living and working in the Capital.</p>
 	<h2>WORK SAMPLES</h2>
 	<ul>
-		<li>01<a href="http://cargocollective.com/melissagrant/Institute-Honors"> badge icons</a></li>
-		<li>02<a href="http://cargocollective.com/melissagrant/Studio"> system-based design</a></li>
-		<li>03<a href="http://cargocollective.com/melissagrant/1-2-and-1-2"> personal project</a></li>
+		<li><a href="http://cargocollective.com/melissagrant/Institute-Honors" target="blank"><span>01</span> badge icons</a></li>
+		<li><a href="http://cargocollective.com/melissagrant/Studio" target="blank"><span>02</span> system-based design</a></li>
+		<li><a href="http://cargocollective.com/melissagrant/1-2-and-1-2" target="blank"><span>03</span> personal project</a></li>
 	</ul>
 	<h2><a href="mailto:hellomelissa.grant@gmail.com?subject=Hello!">SAY HELLO</a></h2>
 </body>
