--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -6,26 +6,27 @@
 </head>
 <body>
 	<div class="wrapper">
-	<header>
-		<h1><a href="http://mgandco.github.io/unit_4/index.html">mg&co</a></h1>
-		<p>Melissa Grant is a multidisciplinary designer living and working in the Capital.</p>
-	</header>
-	<nav>
-		<h2>WORK SAMPLES</h2>
-		<ol>
-			<li><a href="http://cargocollective.com/melissagrant/Institute-Honors" target="blank"><span>01</span> badge icons</a></li>
-			<li><a href="http://cargocollective.com/melissagrant/Studio" target="blank"><span>02</span> system-based design</a></li>
-			<li><a href="http://cargocollective.com/melissagrant/1-2-and-1-2" target="blank"><span>03</span> personal project</a></li>
-		</ol>
-	</nav>
-	<section>
-		<article><img src="images/institutehonoricons_c_350.png" alt="badge icons" title="badge icons"></article>
-		<article><img src="images/institutehonoricons_c_350.png" alt="badge icons" title="badge icons"></article>
-		<article><img src="images/institutehonoricons_c_350.png" alt="badge icons" title="badge icons"></article>
-	</section>
-	<footer>
-		<h2><a href="mailto:hellomelissa.grant@gmail.com?subject=Hello!">SAY HELLO</a></h2>
-	</footer>
+		<header>
+			<h1><a href="index.html">mg&co</a></h1>
+			<p>Melissa Grant is a multidisciplinary designer living and working in the Capital.</p>
+		</header>
+		<nav>
+			<h2>WORK SAMPLES</h2>
+			<ol>
+				<li><a href="http://cargocollective.com/melissagrant/Institute-Honors" target="_blank"><span>01</span> badge icons</a></li>
+				<li><a href="http://cargocollective.com/melissagrant/Studio" target="_blank"><span>02</span> system-based design</a></li>
+				<li><a href="http://cargocollective.com/melissagrant/1-2-and-1-2" target="_blank"><span>03</span> personal project</a></li>
+			</ol>
+		</nav>
+		<section>
+			<a href="#"><img src="images/institutehonoricons_c_350.png" alt="badge icons"></a>
+			<a href="#"><img src="images/institutehonoricons_c_350.png" alt="badge icons"></a>
+			<a href="#"><img src="images/institutehonoricons_c_350.png" alt="badge icons"></a>
+		</section>
+		<footer>
+			<h2>SAY HELLO</h2>
+			<a href="mailto:hellomelissa.grant@gmail.com?subject=Hello!">hellomelissa.grant@gmail.com</a>
+		</footer>
 	</div>
 </body>
 </html>
