unit_6_update_and_unit_7

--- a/unit_6_FPO/index.html
+++ b/unit_6_FPO/index.html
@@ -19,7 +19,7 @@
 		</nav>
 		<section class="clearfix">
 			
-			<a href="<img src="../images/background_2.jpg" alt="desk with chair">" id="project1"></a>
+			<a href="#" id="project1"></a>
 			<a href="#" id="project2"></a>
 			<a href="#" id="project3"></a>
 			<a href="#" id="project4"></a>
