--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -1,37 +1,35 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Melissa Grant</title>
+	<title>MG&CO</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 	<div class="wrapper">
 		<header>
-			<h1><a href="index.html">Melissa Grant</a></h1>
+			<h1><a href="index.html">mg&co</a></h1>
 			<p></p>
 		</header>
 		<nav>
 			<ol>
-				<li><a href="http://cargocollective.com/melissagrant/Institute-Honors" target="_blank"><span>01</span> about melissa g</a></li>
-				<li><a href="http://cargocollective.com/melissagrant/Studio" target="_blank"><span>02</span> personal</a></li>
-				<li><a href="http://cargocollective.com/melissagrant/1-2-and-1-2" target="_blank"><span>03</span> professional</a></li>
-				<li><a href="http://cargocollective.com/melissagrant/1-2-and-1-2" target="_blank"><span>04</span> educational</a></li>
-				<li><a href="http://cargocollective.com/melissagrant/1-2-and-1-2" target="_blank"><span>05</span> contact</a></li>
+				<li><a href="http://cargocollective.com/melissagrant/Institute-Honors" target="_blank"><span>01</span> badge icons</a></li>
+				<li><a href="http://cargocollective.com/melissagrant/Studio" target="_blank"><span>02</span> system-based design</a></li>
+				<li><a href="http://cargocollective.com/melissagrant/1-2-and-1-2" target="_blank"><span>03</span> personal projects</a></li>
 			</ol>
 		</nav>
 		<section class="clearfix">
 			
-			<a href="#"> <img src="images/speak_up_blue.jpg" alt="#" class="project1to1"></a>
-			<a href="#"> <img src="images/atlanta.jpg" alt="#" class="project3to2"></a>
-			<a href="#"> <img src="images/Native_Cinema_Showcase_thumbnail.jpg" alt="interior architecture badge" class="project1to1"></a>
-			<a href="#"> <img src="images/2_2.jpg" alt="interior architecture badge" class="project2to2"></a>
-			<a href="#"> <img src="images/studio_component_3.jpg" alt="#" class="project2to1"></a>
-			<a href="#"> <img src="images/tacos_2.jpg" alt="#" class="project1to1"></a>
-			<a href="#"> <img src="images/1_2.jpg" alt="#" class="project1to2"></a>
-			<a href="#"> <img src="images/atlanta.jpg" alt="#" class="project3to2l"></a>
-			<a href="#"> <img src="images/birdofparadise.jpg" alt="#" class="project1to1"></a>
-			
+			<a href="#" id="project1"></a>
+			<a href="#" id="project2"></a>
+			<a href="#" id="project3"></a>
+			<a href="#" id="project4"></a>
+			<a href="#" id="project5"></a>
+			<a href="#" id="project6"></a>
+			<a href="#" id="project7"></a>
+			<a href="#" id="project8"></a>
+			<a href="#" id="project9"></a>
 		
+			</div>
 		</section>
 		<footer>
 			<p>SAY HELLO</p>
