--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -25,11 +25,11 @@
 			<a href="#"> <img src="images/speak_up_blue.jpg" alt="#" class="project1to1"></a>
 			<a href="#"> <img src="images/atlanta.jpg" alt="#" class="project3to2"></a>
 			<a href="#"> <img src="images/Native_Cinema_Showcase_thumbnail.jpg" alt="interior architecture badge" class="project1to1"></a>
-			<a href="#"> <img src="images/2_2.jpg" alt="interior architecture badge" class="project2to2"></a>
+			<a href="#"> <img src="images/Award_badges.jpg" alt="interior architecture badge" class="project2to2"></a>
 			<a href="#"> <img src="images/studio_component_3.jpg" alt="#" class="project2to1"></a>
 			<a href="#"> <img src="images/tacos_2.jpg" alt="#" class="project1to1"></a>
-			<a href="#"> <img src="images/1_2.jpg" alt="#" class="project1to2"></a>
-			<a href="#"> <img src="images/atlanta.jpg" alt="#" class="project3to2l"></a>
+			<a href="#"> <img src="images/aia.jpg" alt="#" class="project1to2"></a>
+			<a href="#"> <img src="images/aia_philly.jpg" alt="#" class="project3to2l"></a>
 			<a href="#"> <img src="images/birdofparadise.jpg" alt="#" class="project1to1"></a>
 			
 		
