--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -22,7 +22,7 @@
 		</nav>
 		<section class="clearfix">
 			
-			<a href="#"> <img src="images/speak_up_blue.jpg" alt="#" class="project1to1"></a>
+			<a href="http://www.#.com"> <img src="images/speak_up_blue.jpg" alt="#" class="project1to1"></a>
 			<a href="#"> <img src="images/atlanta.jpg" alt="#" class="project3to2"></a>
 			<a href="#"> <img src="images/Native_Cinema_Showcase_thumbnail.jpg" alt="interior architecture badge" class="project1to1"></a>
 			<a href="#"> <img src="images/Award_badges.jpg" alt="interior architecture badge" class="project2to2"></a>
