--- a/portfolio/architecture.html
+++ b/portfolio/architecture.html
@@ -12,11 +12,11 @@
 		</header>
 		<nav>
 			<ol>
-				<li class="listl"><a href="about.html">about</a></li>
+				<li class="listl"><a href="index.html">work</a></li>
 				<li class="listl2"><a href="architecture.html">architecture</a></li>
 				<!-- I want my name to be in the middle... two links on the left and two links on the right. On secondary pages I want the same style but I want the headline to only read "MG" -->
 				<li class="listr"><a href="contact.html">contact</a></li>
-				<li class="listr2"><a href="sideprojects.html">side projects</a></li>
+				<li class="listr2"><a href="about.html">about</a></li>
 			</ol>
 		</nav>
 
