--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -12,11 +12,10 @@
 		</header>
 		<nav>
 			<ol>
-				<li class="listl"><a href="about.html">about</a></li>
+				<li class="listl"><a href="index.html">work</a></li>
 				<li class="listl2"><a href="architecture.html">architecture</a></li>
-				<!-- I want my name to be in the middle... two links on the left and two links on the right. On secondary pages I want the same style but I want the headline to only read "MG" -->
 				<li class="listr"><a href="contact.html">contact</a></li>
-				<li class="listr2"><a href="sideprojects.html">side projects</a></li>
+				<li class="listr2"><a href="about.html">about</a></li>
 			</ol>
 		</nav>
 
@@ -40,65 +39,61 @@
 					<a href="atlanta.html"><img src="images/atlanta.jpg" class="project3to2">
 					<div class="overlay">
 						
-						<p>A weekend in Atlanta</p>
+						<p>A weekend in Atlanta &amp; others</p>
 						&nbsp;
-						<p>illustration / gifs</p>
+						<p>illustration / infograph</p>
 					</div></a>
 				</div>
 				</div>
 
 				<div id="info">
 				<div>
-					<img src="images/Native_Cinema_Showcase_thumbnail.jpg" class="project1to1">
+					<a href="brochure.html"><img src="images/Native_Cinema_Showcase_thumbnail.jpg" class="project1to1">
 					<div class="overlay">
-						<a href="file:///Users/mg/Desktop/mgandco.github.io/portfolio/project_one.html">
-						<p>Native Cinema Showcase</p>
+						<p>Native Cinema Showcase &amp; others</p>
 						&nbsp;
 						<p>identity / illustration</p>
-						</a>
 					</div>
+					</a>
 				</div>
 				</div>
 
 				<div id="info3">
 				<div>
-					<img src="images/aia_philly.jpg" class="project3to2">
+					<a href="convention.html"><img src="images/gallery4.jpg" class="project3to2">
 					<div class="overlay">
-						<a href="file:///Users/mg/Desktop/mgandco.github.io/portfolio/project_one.html">
-						<p>AIA Convetion 2016</p>
+						<p>AIA Convention 2016</p>
 						&nbsp;
-						<p>identity / art direction / illustration</p>
-						</a>
+						<p>curating / exhibit design / illustration</p>
 					</div>
+					</a>
 				</div>
 				</div>
 
 				<div id="info">
 				<div>
-					<img src="images/tacos_2.jpg" class="project1to1">
+					<a href="membership.html"><img src="images/mem_thumbnail.jpg" class="project1to1">
 					<div class="overlay">
-						<a href="file:///Users/mg/Desktop/mgandco.github.io/portfolio/project_one.html">
-						<p>La Biblioteca Taquiera</p>
+						<p>AIA membership recruitment campaign</p>
 						&nbsp;
-						<p>identity / lettering</p>
-						</a>
+						<p>identity</p>
 					</div>
+					</a>
 				</div>
 				</div>
 
 				<div id="info">
 				<div>
-					<img src="images/birdofparadise.jpg" class="project1to1">
+					<a href="sideprojects.html"><img src="images/birdofparadise.jpg" class="project1to1">
 					<div class="overlay">
-						<a href="file:///Users/mg/Desktop/mgandco.github.io/portfolio/project_one.html">
 						<p>1/2 and 1/2</p>
 						&nbsp;
-						<p>just for fun / color theory</p>
-						</a>
+						<p>just for fun</p>
 					</div>
+					</a>
 				</div>
 				</div>
-				
+
 		</section>
 
 		<footer>
