--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -12,11 +12,11 @@
 		</header>
 		<nav>
 			<ol>
-				<li class="listl"><a href="about.html">about</a></li>
+				<li class="listl"><a href="index.html">work</a></li>
 				<li class="listl2"><a href="architecture.html">architecture</a></li>
 				<!-- I want my name to be in the middle... two links on the left and two links on the right. On secondary pages I want the same style but I want the headline to only read "MG" -->
 				<li class="listr"><a href="contact.html">contact</a></li>
-				<li class="listr2"><a href="sideprojects.html">side projects</a></li>
+				<li class="listr2"><a href="about.html">about</a></li>
 			</ol>
 		</nav>
 
@@ -28,13 +28,13 @@
 				<p class="projecttext">
 					Melissa Grant is a multidisciplinary designer living and working in the Capital.
 				</p>
-				<p class="projecttext">
+				<!--<p class="projecttext">
 					She's currently looking for a fun job in a cool city.*
-				</p>
+				</p>-->
 				<p class="projecttext">
-					<a href="#" target="blank">View resume</a>.
+					<a href="#" target="blank">View <a href="resume.pdf" target="blank">resume</a>.
 				</p>
-				<p class="projecttext">
+				<!--<p class="projecttext">
 					*Cities that qualify as "cool" are below.
 					<ol>
 						<li class="listcity">Austin</li>
@@ -44,7 +44,7 @@
 						<li class="listcity">Seattle</li>
 						<li class="listcity">Washington</li> 
 					</ol>
-				</p>
+				</p>-->
 			</div>
 
 			<div class="projectsidebar">
