--- a/portfolio/atlanta.html
+++ b/portfolio/atlanta.html
@@ -12,11 +12,11 @@
 		</header>
 		<nav>
 			<ol>
-				<li class="listl"><a href="about.html">about</a></li>
+				<li class="listl"><a href="index.html">work</a></li>
 				<li class="listl2"><a href="architecture.html">architecture</a></li>
 				<!-- I want my name to be in the middle... two links on the left and two links on the right. On secondary pages I want the same style but I want the headline to only read "MG" -->
 				<li class="listr"><a href="contact.html">contact</a></li>
-				<li class="listr2"><a href="sideprojects.html">side projects</a></li>
+				<li class="listr2"><a href="about.html">about</a></li>
 			</ol>
 		</nav>
 
@@ -26,13 +26,18 @@
 
 			<div class="projectmain">
 				<p class="projecttext">Visit Atlanta
-				<p class="projecttext">illustration / gifs</p>
+				<p class="projecttext">illustration</p>
 				<p class="projecttext">Email masthead showcasing the architecture of Atlanta and other Atlanta icons</p>
+				&nbsp;
+				<p class="projecttext">Intern Titling Survey
+				<p class="projecttext">illustration / infograph</p>
+				<p class="projecttext">This project highlights the results of the Intern Titling Survey. A survey advocating for the elimination of the term &ldquo;intern&rdquo; from the professional language of architecture in order to recognize the impactful work of architectural graduates. View the full-size infograph <a href="http://www.aia.org/aiaucmp/groups/aia/documents/image/aiab104379.png" target="blank"><u>here</u>.</a></p>
 			</div>
 
 			<div class="projectsidebar">
 			<img src="images/atlanta_masthead.png" alt="logo lock ups" class="projectpage">
-			<img src="images/airplane.gif" alt="line icon" class="projectpage">
+			<img src="images/infograph.png" alt="logo lock ups" class="projectpage">
+
 			</div>
 
 		</section>
